fix: markdown markup

--- a/source/changelogs/2016-12-01-December.md
+++ b/source/changelogs/2016-12-01-December.md
@@ -9,7 +9,7 @@ Terminus 1.0 is now available as a public beta, complete with a [new manual](htt
 ### Documentation and Trailing Relaunch
 We've categorized our existing documentation by common user objectives to make resources easier to find. Also included in this relaunch is the groundwork for our all new video training. [Explore introductory videos](https://pantheon.io/docs) and stay tuned for more video content coming soon!
 
-![New Docs](/source/docs/assets/images/docs-relaunch.png)
+![New Docs](../..//source/docs/assets/images/docs-relaunch.png)
 
 
 ### Privacy Shield Framework Compliance
