--- a/source/changelogs/2018-01-01-January.md
+++ b/source/changelogs/2018-01-01-January.md
@@ -5,7 +5,7 @@ description: January changelog updates.
 ---
 
 ## Pantheon Moves to Google Cloud Platform
-![GCP and Pantheon Logo](/source/docs/assets/images/gcp.png)
+![GCP and Pantheon Logo](../..//source/docs/assets/images/gcp.png)
 
 Pantheon has switched infrastructure providers from Rackspace to Google Cloud Platform. This switch requires no downtime, as we actually did it *six months ago*! Read the announcement [here](https://pantheon.io/blog/pantheon-moves-google-cloud-platform).
 
