--- a/source/changelogs/2017-10-01-October.md
+++ b/source/changelogs/2017-10-01-October.md
@@ -21,12 +21,14 @@ We’ve made [PHP 7.1](http://www.php.net/ChangeLog-7.php#7.1.0) available for a
 ### WordPress Core Upgrades
 [WordPress 4.8.3](https://codex.wordpress.org/Version_4.8.3) has been [pushed](https://github.com/pantheon-systems/WordPress/pull/139) to all WordPress site dashboards. This release is classified as a critical [security release](https://status.pantheon.io/incidents/gd6ls2q28j2h), and we encourage all sites to upgrade immediately.
 
-
 ## Documentation
 
 <a href="/docs/guides/wordpress-git/">
-  <img alt="WordPress Development" src="/source/docs/assets/images/git-sftp-wp-docs-guide.png" style="max-height:200px;" class="main-topic-info__plugin-image" />
+
+![WordPress Development](../../source/docs/assets/images/git-sftp-wp-docs-guide.png)
+
 </a>
+
 
 ### [Using Git with SFTP & WordPress](/docs/guides/wordpress-git/)
 Learn how to use the WordPress dashboard, an SFTP client, and your text editor of choice to work quickly, safely and easily on Pantheon's Git-based platform.
