--- a/source/changelogs/2017-11-01-November.md
+++ b/source/changelogs/2017-11-01-November.md
@@ -11,7 +11,7 @@ Global CDN now respects the `no-store` directive in the `cache-control` header.
 
 ### Site Dashboard Update
 On newly created sites, you are now directed to install your WordPress or Drupal CMS as the next step.
-![Install WordPress or Drupal](/source/docs/assets/images/dashboard/install-cms.png)
+![Install WordPress or Drupal](../../source/docs/assets/images/dashboard/install-cms.png)
 
 ### Drupal Core Upgrades
 [Drupal 8.4.2](https://www.drupal.org/project/drupal/releases/8.4.2) has been [pushed](https://github.com/pantheon-systems/drops-8/pull/196) to all Drupal 8 site dashboards.
