--- a/source/changelogs/2018-03-01-March.md
+++ b/source/changelogs/2018-03-01-March.md
@@ -17,7 +17,7 @@ We’ve upgraded to PHP [5.6.35](http://php.net/ChangeLog-5.php#5.6.35), [7.0.29
 
 Pantheon's update to WordPress 4.9.5 included a customization to the WordPress login form, which shows a button to "Return to Pantheon" to help with the first time user experience. Additional information is available [here](https://github.com/pantheon-systems/WordPress/issues/155).
 
-![WordPress login with Pantheon button](/source/docs/assets/images/return-to-pantheon.png)
+![WordPress login with Pantheon button](../..//source/docs/assets/images/return-to-pantheon.png)
 
 ### Drupal Core Upgrades
 [Drupal 8.5.1](https://www.drupal.org/project/drupal/releases/8.5.1) has been pushed to all Drupal 8 site dashboards. This release is classified as a security release and all users are urged to upgrade their sites as soon as possible.
